<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Help Me Out</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="header">Help Me Out</string>
    <string name="signUpText">SIGN UP</string>
    <string name="loginText"> LOGIN</string>
    <string name="title_activity_home_page">Home Page</string>
    <string name="name">John Doe</string>
    <string name="currentJobs">Current Jobs: 0</string>
    <string name="jobsComplete">Jobs Complete: 0</string>
    <string name="rank">Rank:SLOW</string>
    <string name="getJobText">GET JOB</string>
    <string name="postJobText">POST JOB</string>
    <string name="profileText">PROFILE</string>
    <string name="myJobsText">MY JOBS</string>
    <string name="postJobHeader">GET HELP</string>
    <string name="title_activity_post_job">Post Job</string>
    <string name="title_activity_calendar_activity">Calendar</string>
    <string name="title_activity_calendar_picker">Pick Date</string>
	<string name="need_account">Need an account? Sign up now!</string>
	<string name="notes">Notes</string>
    <string-array name="jobCategories">
        <item>Food</item>
        <item>Rides</item>
        <item>Grocerieså</item>
        <item>Cleaning</item>
        <item>Laundry</item>
        <item>Maintenance</item>
        <item>TechSupport</item>
        <item>Others</item>
    </string-array>

    <string name="categoryText">Category</string>
    <string name="paymentText">Payment Amount</string>

    <string-array name="payment_array">
        <item>$3.00</item>
        <item>$4.00</item>
        <item>$5.00</item>
        <item>$6.00</item>
        <item>$7.00</item>
        <item>$8.00</item>
        <item>$9.00</item>
        <item>$10.00</item>
        <item>$11.00</item>
        <item>$12.00</item>
        <item>$13.00</item>
        <item>$14.00</item>
        <item>$15.00</item>
        <item>$16.00</item>
        <item>$17.00</item>
        <item>$18.00</item>
        <item>$19.00</item>
        <item>$20.00</item>
    </string-array>

    <string name="meetingLocationText">Meeting Location</string>
    <string name="locationHint">CM Room 223</string>
    <string name="descriptionText">Description</string>
    <string name="descriptionHint"></string>
    <string name="timeText">Time</string>
    <string name="dateText">Date</string>

    <string-array name="negotiable_array">
        <item>YES!</item>
        <item>NO!</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="negotiableText">Negotiable</string>
    <string name="homeText">HOME</string>
    <string name="submitText">SUBMIT</string>
    <string name="title_activity_jobs_available">Jobs Available</string>
    <string name="allJobsText">All Jobs</string>
    <string name="foodJobsText">Food Jobs</string>
    <string name="laundryJobsText">Laundry Jobs</string>
    <string name="groceryJobsText">Grocery Jobs</string>
    <string name="cleaningJobsText">Cleaning Jobs</string>
    <string name="ridesJobsText">Rides</string>
    <string name="techSupportJobsText">Tech Support</string>
    <string name="maintenanceJobsText">Maintenance Jobs</string>
    <string name="otherJobsText">Other Jobs</string>
    <string name="availableJobsHeader">Jobs Avialable</string>
    <string name="title_activity_profile_page">Profile Page</string>
    <string name="overalRatingText">Overall Rating</string>
    <string name="reliabilityText">Reliability Rating</string>
    <string name="currentJobsText">Current Jobs</string>
    <string name="title_activity_jobs_display">Jobs Display</string>
    <string name="title_activity_sign_up"> Sign Up</string>
    <string name="firstNameHint"> First Name </string>
    <string name="lastNameHint"> Last Name</string>
    <string name="phoneNumberHint"> Phone Number</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="backText">Back</string>
    <string name="signoutText">SIGN OUT</string>
    <string name="not_available">N/A</string>
    <string name="loading">Loading&#8230;</string>
    <string name="title_activity_all_jobs">Jobs</string>
    <string name="offerHelp">offer help</string>
    <string name="notesHint">Notes: </string>
    <string name="title_activity_display_my_jobs">My Jobs</string>
    <string name="title_activity_display_jobs_im_doing">Jobs I\'m Doing</string>
    <string name="jobsINeedText">JOBS I NEED DONE</string>
    <string name="jobsImDoingText">JOBS I\'M DOING</string>
    <string name="cancelJob">Cancel Job</string>
    <string name="finishJob">Finish Job</string>
    <string name="completed">COMPLETE JOB</string>
    <string name="cancel">CANCEL JOB</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="title_activity_task_complete">TaskComplete</string>
    <string name="reliability">Reliability</string>
    <string name="speed">Speed</string>
    <string name="title_activity_time_picker">TimePicker</string>
    <string name="title_activity_time">TimeActivity</string>
    <string name="noJobs">We\'re Sorry, there are no jobs to display. </string>
    <color name="lightBlue">#3A5C7E</color>
    <color name="blue">#2c3e50</color>
    <color name="white">#FFFFFF</color>

</resources>