<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.helpmeout.PostJob" >

        <TextView
            android:id="@+id/postJobHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/header"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/categoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/postJobHeader"
            android:text="@string/categoryText"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/postJobHeader"
            android:layout_toRightOf="@id/categoryText" />

        <TextView
            android:id="@+id/paymentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/categorySpinner"
            android:text="@string/paymentText"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/paymentAmountSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/categorySpinner"
            android:layout_toRightOf="@id/paymentAmount" />

        <TextView
            android:id="@+id/meetingLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/paymentAmountSpinner"
            android:text="@string/meetingLocationText"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/meetingLocationInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/paymentAmountSpinner"
            android:layout_toRightOf="@id/meetingLocation"
            android:hint="@string/locationHint" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meetingLocationInput"
            android:text="@string/descriptionText"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/meetingLocationInput"
            android:layout_toRightOf="@id/description"
            android:hint="@string/descriptionHint" />
        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionInput"
            android:text="@string/notesHint"
            android:textSize="15sp" />
        
         <EditText
            android:id="@+id/notesInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionInput"
            android:layout_toRightOf="@id/notes"
            android:hint="@string/descriptionHint" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notesInput"
            android:text="@string/timeText"
            android:textSize="15sp" />



            <Button
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/time"
                android:text="@string/timeText"
           
                />


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timePicker"
            android:text="@string/dateText"
            android:textSize="15sp" />
	

		<Button
	                android:id="@+id/datePicker"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:calendarViewShown="false"
	                android:layout_below="@id/date"
	                android:text="@string/dateText" />
	           
	           

       

		
        <TextView
            android:id="@+id/negotiable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/datePicker"
            android:text="@string/negotiableText"
            android:textSize="15sp" 
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/negotiableSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/datePicker"
            android:layout_toRightOf="@id/negotiable" 
            android:visibility="gone"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/negotiableSpinner"
            android:layout_alignParentRight="true"
            android:text="@string/submitText" />
    </RelativeLayout>

</ScrollView>