<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3e50"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/short_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading" 
        android:textColor="#fff"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/name"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/profile_white"
        android:drawablePadding="5dip"
        android:gravity="center_vertical"
        android:text="@string/loading"
        android:textColor="#fff"
        android:textSize="15sp" 
         android:paddingTop="5dip"/>

    <TextView
        android:id="@+id/contact_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/phone_white"
        android:drawablePadding="5dip"
        android:gravity="center_vertical"
        android:text="@string/loading"
        android:textColor="#fff"
        android:textSize="15sp" 
         android:paddingTop="5dip"
       	/>

    <TextView
        android:id="@+id/price"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/money_white"
        android:drawablePadding="5dip"
        android:gravity="center_vertical"
        android:text="@string/loading"
        android:textColor="#fff"
        android:textSize="15sp" 
         android:paddingTop="5dip" />

    <TextView
        android:id="@+id/time_frame_date"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/clock_white"
        android:drawablePadding="5dip"
        android:gravity="center_vertical"
        android:text="@string/loading"
        android:textColor="#fff"
        android:textSize="15sp" 
         android:paddingTop="5dip" />


    <TextView
        android:id="@+id/location"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/map_white"
        android:drawablePadding="5dip"
        android:gravity="center_vertical"
        android:text="@string/loading"
        android:textColor="#fff"
        android:textSize="15sp" 
         android:paddingTop="5dip"/>

     <TextView
        android:id="@+id/notesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location"
        android:paddingLeft="25dip"
        android:text="@string/notes"
        android:textColor="#fff"
        android:textSize="25sp" />
    
    <TextView
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
             android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/notes_style"
        android:padding="15dip"
        android:text="@string/loading"
        android:textColor="#000"
        android:textSize="15sp"  />

    <Button
        android:id="@+id/cancelJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelJob"
		android:layout_marginBottom="10dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/button_style" />

</LinearLayout>